Implement proof of concept, add functional test
