# app/Http/Controllers/ProductController.php
@@ -10,7 +10,7 @@ class ProductController extends Controller
     /**
      * @OA\Get(
      *     path="/api/products/",
-     *     @OA\Response(response="200", description="Display all products"),
+     *     @OA\Response(response="200", description="Success"),
      * )
      */    
     public function index()
@@ -20,4 +20,30 @@ class ProductController extends Controller
 
         return response()->json($products);
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/products/show",
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="404", description="Not found"),
+     *     @OA\Parameter(in="query", name="id", required=true),
+     * )
+     */    
+    public function show(Request $request)
+    {
+        // Validate
+        $request->validate([    
+            'id' => 'required'
+        ]);
+
+        // Find product by id
+        $product = Product::find($request->id);
+
+        if(empty($product)) {
+            return response('Product not found', 404);
+        }
+
+        return response()->json($product);
+    }
+
 }
