# storage/api-docs/api-docs.json
@@ -38,7 +38,7 @@
                     "404": {
                         "description": "Cart item not found"
                     },
-                    "403": {
+                    "500": {
                         "description": "Internal server error"
                     }
                 }
@@ -111,7 +111,7 @@
                     "404": {
                         "description": "Cart item not found"
                     },
-                    "403": {
+                    "500": {
                         "description": "Internal server error"
                     }
                 }
@@ -122,7 +122,27 @@
                 "operationId": "c98ca8808a2163d50d2dab3d7062a432",
                 "responses": {
                     "200": {
-                        "description": "Display all products"
+                        "description": "Success"
+                    }
+                }
+            }
+        },
+        "/api/products/show": {
+            "get": {
+                "operationId": "80a7e9dd3b6ff0ba975ad379ea46caee",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not found"
                     }
                 }
             }
